{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 275,
  "lineage": "60c1a974-453c-2c63-0af4-65aaf1d024f4",
  "resources": [
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:security-group/sg-02b2fb8c0ab2abcda",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02b2fb8c0ab2abcda",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outline-sg",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "outline-sg",
            "name_prefix": "",
            "owner_id": "159084421067",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "outline-sg"
            },
            "tags_all": {
              "Name": "outline-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c50e2c4ff65f812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:internet-gateway/igw-02ca620dafad26fce",
            "id": "igw-02ca620dafad26fce",
            "owner_id": "159084421067",
            "tags": {
              "Name": "vpc-ecs"
            },
            "tags_all": {
              "Name": "vpc-ecs"
            },
            "vpc_id": "vpc-06c50e2c4ff65f812"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02ca620dafad26fce",
            "id": "r-rtb-0a61c2f6e7803497f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a61c2f6e7803497f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.infrastructure.module.vpc.aws_route_table.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:route-table/rtb-0722ac86da63bb14f",
            "id": "rtb-0722ac86da63bb14f",
            "owner_id": "159084421067",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-ecs-private-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-ecs-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c50e2c4ff65f812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:route-table/rtb-03880c02ebe0a4554",
            "id": "rtb-03880c02ebe0a4554",
            "owner_id": "159084421067",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-ecs-private-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-ecs-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c50e2c4ff65f812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:route-table/rtb-05c714d61f751021a",
            "id": "rtb-05c714d61f751021a",
            "owner_id": "159084421067",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-ecs-private-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-ecs-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c50e2c4ff65f812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:route-table/rtb-0a61c2f6e7803497f",
            "id": "rtb-0a61c2f6e7803497f",
            "owner_id": "159084421067",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-ecs-public"
            },
            "tags_all": {
              "Name": "vpc-ecs-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c50e2c4ff65f812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0130254f30b4b68ce",
            "route_table_id": "rtb-0722ac86da63bb14f",
            "subnet_id": "subnet-020d2a227a52b4c0d"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.private",
            "module.infrastructure.module.vpc.aws_subnet.private",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0effae09a14aaf744",
            "route_table_id": "rtb-03880c02ebe0a4554",
            "subnet_id": "subnet-007c31e686f65ecee"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.private",
            "module.infrastructure.module.vpc.aws_subnet.private",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0898b3c323bbfc54d",
            "route_table_id": "rtb-05c714d61f751021a",
            "subnet_id": "subnet-0b56533e4bfa4f741"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.private",
            "module.infrastructure.module.vpc.aws_subnet.private",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ec0e93964801a26",
            "route_table_id": "rtb-0a61c2f6e7803497f",
            "subnet_id": "subnet-026e0f159c51c53b1"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.public",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca8aec699a825c28",
            "route_table_id": "rtb-0a61c2f6e7803497f",
            "subnet_id": "subnet-0607cdc2e8412e94c"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.public",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055ea582ef703dab3",
            "route_table_id": "rtb-0a61c2f6e7803497f",
            "subnet_id": "subnet-0fc537fc31e90b3e8"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.public",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:subnet/subnet-020d2a227a52b4c0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020d2a227a52b4c0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159084421067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-ecs-private-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-ecs-private-us-east-1a"
            },
            "vpc_id": "vpc-06c50e2c4ff65f812"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:subnet/subnet-007c31e686f65ecee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007c31e686f65ecee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159084421067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-ecs-private-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-ecs-private-us-east-1b"
            },
            "vpc_id": "vpc-06c50e2c4ff65f812"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:subnet/subnet-0b56533e4bfa4f741",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b56533e4bfa4f741",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159084421067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-ecs-private-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-ecs-private-us-east-1c"
            },
            "vpc_id": "vpc-06c50e2c4ff65f812"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:subnet/subnet-026e0f159c51c53b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026e0f159c51c53b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159084421067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-ecs-public-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-ecs-public-us-east-1a"
            },
            "vpc_id": "vpc-06c50e2c4ff65f812"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:subnet/subnet-0607cdc2e8412e94c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0607cdc2e8412e94c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159084421067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-ecs-public-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-ecs-public-us-east-1b"
            },
            "vpc_id": "vpc-06c50e2c4ff65f812"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:subnet/subnet-0fc537fc31e90b3e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc537fc31e90b3e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159084421067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-ecs-public-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-ecs-public-us-east-1c"
            },
            "vpc_id": "vpc-06c50e2c4ff65f812"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159084421067:vpc/vpc-06c50e2c4ff65f812",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ddae3e054cfd08fe",
            "default_route_table_id": "rtb-0f16af3ac981d1af7",
            "default_security_group_id": "sg-089403a84c7eb0b20",
            "dhcp_options_id": "dopt-0ad9c44780816ccf2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c50e2c4ff65f812",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f16af3ac981d1af7",
            "owner_id": "159084421067",
            "tags": {
              "Name": "vpc-ecs"
            },
            "tags_all": {
              "Name": "vpc-ecs"
            }
          }
        }
      ]
    }
  ]
}